infra/k8s/posts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-svc
spec:
  type: NodePort
  selector:
    app: posts
  ports:
     - name: posts
       protocol: TCP
       port: 4000
       targetPort: 4000
