infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com 
      http: 
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-svc
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-svc
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-svc
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
